ну пиздец, еще много чего делать нужно будет